Vitis-platforms/2020.2/README.md
# How to create Vitis 2020.2 application with Aldec platforms

## Table of Content
- [Instruction](#instruction)
  - [Instruction](#instruction)
  - [Install XRT](#install_xrt)
  - [Build sysroot](#build_sysroot)
  - [Create a project application](#create_a_project_application)

<a name="instruction"/>

## Instruction

<a name="install_xrt"/>

### Install XRT

First step is to download and install XRT 2020.2 on a host workstation. The following commands should be performed:
```
$ git clone https://github.com/Xilinx/XRT.git
$ cd XRT
$ git checkout 2020.2
$ src/runtime_src/tools/scripts/xrtdeps.sh
$ scl enable devtoolset-9 bash
$ cd build/
$ ./build.sh
$ sudo yum install Release/*-xrt.rpm
```

<a name="build_sysroot"/>

### Build sysroot

Sysroot is necessary and this chapter demostrates how to download and build it.

1. Download file "ZYNQMP common image" from the [Xilinx webpage](https://www.xilinx.com/support/download/index.html/content/xilinx/en/downloadNav/embedded-design-tools.html)

2. Unpack downloaded file.

3. Build sysroot.
```
$ cd xilinx-zynqmp-common-v2020.2
$ ./sdk.sh
```

4. Sysroot should be available in **xilinx-zynqmp-common-v2020.2/ir/sysroots/aarch64-xilinx-linux/** folder.

<a name="create_a_project_application"/>

### Create a project application

Now it is possible to create a project application in Vitis:

1. Run Vitis.

2. Select **File -> New -> Application Project...**.

3. Click **Next** on the welcome page.

4. Add the Aldec platform by clicking an icon **Add** and entering a path to the Aldec platform.

5. Select the platform and click **Next**.

6. Enter an application project name. Make sure that target processor is **psu_cortexa53 SMP** and click **Next**.

7. Enter a path to sysroot for aarch64 built in the point 2.

8. Select **Empty Application** or an exemplary apllication. Click **Finish**.

9. Build the application.

10. Copy built files to a SD card and run the Aldec TySOM board.

For example, if for a **hello_world** application project Hardware building configuration was selected, needed files can be available in a directory: **hello_world_system/Hardware/package/sd_card/**

